# a-share-concept-financial-screener

./: .gitattributes  .gitignore  AGENT_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: feature_request.yml  tests.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
config/: concepts.json
docs/: GITHUB_RELEASE.md  PROJECT_APPLICATION.md  PROJECT_STRUCTURE.md  WORKFLOWS.md
examples/: companies.csv
examples/concept_notes/: example.md
scripts/: build_showcase.py  build_workflow_overview.py  check_public_repo.py
tests/: test_canslim.py  test_cli_build_concept_candidates.py  test_cli_build_concepts_draft.py  test_cli_build_insights.py  test_cli_evidence_extract.py  test_cli_pdf_extract.py  test_cli_quote_build.py  test_cli_round4.py  test_concept_candidate_builder.py  test_concept_candidate_schema.py  test_concept_draft_builder.py  test_concept_draft_writer.py  test_concept_freezer.py  test_concept_scores.py  test_concept_validator.py  test_concept_workflow.py  test_data_quality_fixes.py  test_deliverables.py  test_evidence_extractor.py  test_final_validation.py  test_insight_extractor.py  test_insight_schema.py  test_manual_review.py  test_markdown_parser.py  test_metric_extractor.py  test_metric_series.py  test_metric_trends.py  test_pdf_extractor.py  test_pipeline_guards.py  test_public_repo_audit.py  test_quote_reader.py  test_quote_schema.py  test_report_downloader.py  test_reporting.py  test_round3_quality.py  test_round5_diagnosis.py  test_table_extraction.py  test_web_api.py
(+63 files in other folders)
